avoid destination via edge.getDistance in value expression